front-end content initial

--- a/my_site/core/templates/Includes/footer.html
+++ b/my_site/core/templates/Includes/footer.html
@@ -1,11 +1,6 @@
 <footer>
-    <h3>файлы</h3>
-    <h3>файлы</h3>
-    <h3>файлы</h3>
-    <h3>файлы</h3>
-    <h3>файлы</h3>
-    <h3>файлы</h3>
-    <h3>файлы</h3>
-    <h3>файлы</h3>
-    <h3>файлы</h3>
+    <h2>Футер-нутер</h2>
+    <p>Phone: {{ contact_info.phone }}</p>
+    <p>Email: {{ contact_info.email }}</p>
+    <p>Address: {{ contact_info.address }}</p>
 </footer>
