--- a/my_site/content/static/css/Includes/index.css
+++ b/my_site/content/static/css/Includes/index.css
@@ -6,12 +6,10 @@ body {
 :root {
   /* fonts */
   --font-nunito-sans: "Nunito Sans";
-
   /* font sizes */
   --font-size-sm: 14px;
   --font-size-base: 16px;
   --font-size-lg: 18px;
-
   /* Colors */
   --color-white: #fff;
   --color-lightsteelblue: #9cb7df;
@@ -19,17 +17,16 @@ body {
   --color-dodgerblue-200: #428cff;
   --color-black: #000;
   --black-titles: #1b1b1b;
-
   /* Gaps */
   --gap-13xl: 32px;
   --gap-5xs: 8px;
-
   /* Paddings */
   --padding-base: 16px;
   --padding-5xs: 8px;
   --padding-xs: 12px;
-
   /* Border radiuses */
   --br-base: 16px;
   --br-20xl: 39px;
 }
+
+/*# sourceMappingURL=index.css.map */
