--- a/my_site/core/templates/MainPage/main_page.html
+++ b/my_site/core/templates/MainPage/main_page.html
@@ -55,12 +55,12 @@
     {{art|safe}}
 </ul>
 
-
+wervr
 
 <div class="iphone-13-14-11">
     <div class="ellipse-parent">
         <div class="frame-child"></div>
-        <img class="frame-item" alt="" src="./public/group-814.svg" />
+        <img class="frame-item" alt="" src="./public/group-814.svg"/>
 
         <div class="frame-inner"></div>
         <div class="wrapper">
@@ -73,10 +73,10 @@
             <div class="div">Мат.помощь</div>
         </div>
         <div class="arrowsarrow-left-parent">
-            <img class="arrowsarrow-left-icon" alt="" />
+            <img class="arrowsarrow-left-icon" alt=""/>
 
             <b class="b">Меню</b>
-            <img class="arrowsarrow-left-icon" alt="" />
+            <img class="arrowsarrow-left-icon" alt=""/>
         </div>
     </div>
     <div class="parent">
