--- a/my_site/core/templates/Includes/header.html
+++ b/my_site/core/templates/Includes/header.html
@@ -1,9 +1,24 @@
 <header>
-    <h1>Меню</h1>
-    <section>
-        <span></span>
-        <button>ПрофОргам</button>
-        <button>ПрофОргам</button>
-        <button>ПрофОргам</button>
-    </section>
+    <div class="ellipse-parent">
+        <div class="frame-child">
+            <div class="wrapper">
+                <div class="div">ПрофОргам</div>
+            </div>
+            <div class="wrapper">
+                <div class="div">ПрофОргам</div>
+            </div>
+            <div class="wrapper">
+                <div class="div">ПрофОргам</div>
+            </div>
+        </div>
+        <img class="frame-item" alt="" src="./public/group-814.svg"/>
+
+        <div class="frame-inner"></div>
+        <div class="arrowsarrow-left-parent">
+            <img class="arrowsarrow-left-icon" alt=""/>
+
+            <b class="b">Меню</b>
+            <img class="arrowsarrow-left-icon" alt=""/>
+        </div>
+    </div>
 </header>
