--- a/my_site/core/templates/Includes/index.html
+++ b/my_site/core/templates/Includes/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="{% static 'css/Includes/index.css' %}" rel="stylesheet">
-    <link href="{% static 'css/Includes/header.css' %}" rel="stylesheet">
-    <link href="{% static 'css/Includes/footer.css' %}" rel="stylesheet">
+<!--    <link href="{% static 'css/Includes/header.css' %}" rel="stylesheet">-->
+<!--    <link href="{% static 'css/Includes/footer.css' %}" rel="stylesheet">-->
+    <link href="{% static 'css/MainPage/main_page.css' %}" rel="stylesheet">
 
     <link
             rel="stylesheet"
@@ -29,8 +30,8 @@
 </main>
 {% include 'Includes/footer.html' %}
 {% block js %}
-
 {% endblock %}
-a
+<script src="{% static 'js/MainPage/main_page.js' %}"></script>
+<script src="http://code.jquery.com/jquery-2.0.2.min.js"></script>
 </body>
 </html>
