--- a/my_site/core/templates/MainPage/main_page.html
+++ b/my_site/core/templates/MainPage/main_page.html
@@ -26,6 +26,7 @@
         </ul>
         {% endif %}
     </li>
+    {{node.name}}
     {% endrecursetree %}
 </ul>
 {{description}}
@@ -54,31 +55,10 @@
 <ul>
     {{art|safe}}
 </ul>
+{% endif %}
 
-wervr
 
 <div class="iphone-13-14-11">
-    <div class="ellipse-parent">
-        <div class="frame-child"></div>
-        <img class="frame-item" alt="" src="./public/group-814.svg"/>
-
-        <div class="frame-inner"></div>
-        <div class="wrapper">
-            <div class="div">ПрофОргам</div>
-        </div>
-        <div class="container">
-            <div class="div">Мат.помощь</div>
-        </div>
-        <div class="frame">
-            <div class="div">Мат.помощь</div>
-        </div>
-        <div class="arrowsarrow-left-parent">
-            <img class="arrowsarrow-left-icon" alt=""/>
-
-            <b class="b">Меню</b>
-            <img class="arrowsarrow-left-icon" alt=""/>
-        </div>
-    </div>
     <div class="parent">
         <div class="div3">Какое-то лютое описание</div>
         <div class="div4">
@@ -105,18 +85,5 @@ wervr
             <div class="b">Примеры ситуаций</div>
         </div>
     </div>
-    <div class="frame-parent">
-        <div class="parent1">
-            <div class="b">файлы</div>
-            <div class="b">файлы</div>
-            <div class="b">файлы</div>
-        </div>
-        <div class="parent1">
-            <div class="b">файлы</div>
-            <div class="b">файлы</div>
-            <div class="b">файлы</div>
-        </div>
-    </div>
 </div>
-{% endif %}
 {% endblock %}
