getting back to front

--- a/my_site/content/static/css/MainPage/main_page.css
+++ b/my_site/content/static/css/MainPage/main_page.css
@@ -38,6 +38,9 @@
   position: relative;
   font-weight: 500;
 }
+.div a {
+  text-decoration: none;
+}
 
 .container,
 .frame,
@@ -77,6 +80,9 @@
 
 .b {
   position: relative;
+}
+.b a {
+  text-decoration: none;
 }
 
 .arrowsarrow-left-parent {
