--- a/my_site/core/templates/MainPage/main_page.html
+++ b/my_site/core/templates/MainPage/main_page.html
@@ -47,8 +47,6 @@
     <a href="/{{ node.get_ancestors|tree_path:"/"}}/{{node.name}}">{{article.title}}</a>
     {% endfor %}
 </ul>
-{% else %}
-<p>В этой категории нет статей.</p>
 {% endif %}
 {% if is_art %}
 <h2>Статья</h2>
@@ -57,7 +55,7 @@
 </ul>
 {% endif %}
 
-
+{% if not articles %}
 <div class="iphone-13-14-11">
     <div class="parent">
         <div class="div3">Какое-то лютое описание</div>
@@ -86,4 +84,5 @@
         </div>
     </div>
 </div>
+{% endif %}
 {% endblock %}
