--- a/my_site/content/static/css/MainPage/main_page.scss
+++ b/my_site/content/static/css/MainPage/main_page.scss
@@ -41,6 +41,9 @@
 .div {
   position: relative;
   font-weight: 500;
+  a {
+    text-decoration: none;
+  }
 }
 
 .container,
@@ -81,6 +84,9 @@
 
 .b {
   position: relative;
+  a {
+    text-decoration: none;
+  }
 }
 
 .arrowsarrow-left-parent {
