--- a/my_site/content/static/css/MainPage/main_page.scss
+++ b/my_site/content/static/css/MainPage/main_page.scss
@@ -2,12 +2,12 @@
   position: absolute;
   top: 95px;
   left: 95px;
+  margin-left: auto;
+  margin-right: auto;
   border-radius: 50%;
   background-color: transparent;
   border: 2px solid var(--color-white);
   box-sizing: border-box;
-  width: 200px;
-  height: 200px;
 }
 
 .frame-item {
@@ -22,8 +22,6 @@
 
 .frame-inner {
   position: absolute;
-  top: calc(50% - 80px);
-  left: calc(50% - 100px);
   filter: blur(2.71px);
   border-radius: 50%;
   background: radial-gradient(
@@ -33,8 +31,6 @@
   );
   border: 1.4px solid #a1d0ff;
   box-sizing: border-box;
-  width: 200px;
-  height: 200px;
   opacity: 0.5;
 }
 
@@ -356,4 +352,40 @@
 
 .b2 {
   color: var(--black-titles);
+}
+
+.big {
+  width: 250px;
+  height: 250px;
+  top: calc(50% - 80px);
+  left: calc(50% - 125px);
+}
+
+.small {
+  width: 200px;
+  height: 200px;
+  top: calc(50% - 80px);
+  left: calc(50% - 100px);
+}
+
+.big_c {
+  width: 280px;
+  height: 280px;
+  top: calc(50% - 138px);
+  left: calc(50% - 140px);
+}
+
+.small_c {
+  width: 230px;
+  height: 230px;
+  top: calc(50% - 108px);
+  left: calc(50% - 115px);
+}
+
+.sw {
+
+}
+
+.bw {
+
 }
