--- a/my_site/core/templates/Includes/footer.html
+++ b/my_site/core/templates/Includes/footer.html
@@ -5,6 +5,10 @@
             <div class="b">{{ contact_info.phone }}</div>
         </div>
         <div class="parent1">
+            <div class="b">Email:</div>
+            <div class="b">{{ contact_info.email }}</div>
+        </div>
+        <div class="parent1">
             <div class="b">Address:</div>
             <div class="b">{{ contact_info.address }}</div>
         </div>
