--- a/my_site/core/templates/MainPage/main_page.html
+++ b/my_site/core/templates/MainPage/main_page.html
@@ -19,7 +19,7 @@
 
 {% if not articles %}
 <div class="iphone-13-14-11">
-    <div class="parent">
+    <div class="parent desc">
         <div class="div3">Какое-то лютое описание</div>
         <div class="div4">
             Пишу зачем нужен сайт Пишу зачем нужен сайт Пишу зачем нужен сайт Пишу
